--- a/ai-core/requirements.txt
+++ b/ai-core/requirements.txt
@@ -23,6 +23,8 @@ openai==1.72.0
 pydantic==2.11.3
 pydantic_core==2.33.1
 python-dotenv==1.1.0
+requests==2.31.0
+urllib3==1.26.18
 six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
 sniffio==1.3.1
 tqdm==4.67.1
